# price_traking_ai

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  instrucitons.md  pyproject.toml  setup.py
api/: README.md  dependencies.py  main.py  models.py  settings.py
docs/: README.md  decisions.md
etl/: README.md  __init__.py  fetcher.py  models.py  parser.py  repository.py  router.py
finup_price_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
infra/: Dockerfile  README.md
migrations/: README.md  alembic.ini  env.py  script.py.mako
migrations/versions/: 001_initial.py
ml/: README.md  __init__.py  detector.py  evaluation.ipynb  evaluation_test.ipynb  models.py  repository.py  router.py
n8n/: README.md  workflow_1_ingesta.json  workflow_2_deteccion_alerta.json  workflow_3_reindexacion.json
prompts/: alert_explanation.txt  conversational_query.txt
rag/: README.md  __init__.py  corpus.py  models.py  retriever.py  router.py
tests/: README.md  __init__.py  test_api_integration.py  test_etl_fetcher.py  test_etl_parser.py  test_ml_detector.py  test_rag_retrieval.py
